Fixed wrong color of icons in nav-tabs when hovering them.

--- a/public/stylesheets/htwplus.css
+++ b/public/stylesheets/htwplus.css
@@ -634,6 +634,11 @@ input.hp-notification-hour {
 	background-color: #76b900;
 }
 
+.hp-nav-tabs > li > a > .glyphicon:hover,
+.hp-nav-tabs > li > a > .glyphicon:focus {
+    color: rgb(90,88,88);
+}
+
 .hp-nav-tabs li.active > a {
     border-bottom-color: transparent !important;
     box-shadow: 0 -1px 1px rgba(0, 0, 0, 0.125);
